[package]
name = "jtable"
version = "0.1.1"
authors = ["filsam <samoylovfp@gmail.com>"]
description = "Utility classes to easily render json responses for jtable.org plugin"
license = "Apache-2.0"
repository = "https://github.com/samoylovfp/jtable-rs"

[dependencies]
serde = "1.0.80"
serde_json = "1.0.33"
serde_derive = "1.0.80"
